fixed letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ header .main-nav li a, header .right-nav li a {
   font-family: 'built_titling', Helvetica, sans-serif;
   font-weight: 400;
   font-size: 18px;
-  letter-spacing: 18px;
+  letter-spacing: 4.5px;
   background: #BF0000;
   color: white;
   padding: 12px 22px;
